# udemy-python-mega-course

./: .gitignore  README.md  pyproject.toml
app1_eng_thes/: EnglishThesaurus.md  app1.py
app2_volc_popl_webmap/: VolcanoAndPopulationWebMap.md  map1.py
app3_flask_website/: WebsiteWithFlask.md  flask_basic_app.py  flask_with_template.py
app3_flask_website/static/css/: main.css
app3_flask_website/templates/: about.html  home.html  layout.html
app4_bookshop_db/: BookshopDatabaseApp.md  bookshop_app.py  bookshop_db.py
app5_mobile_app/: AppDesign.kv  FeelGoodMobileApp.md  app_main.py  datastore.py
basics/: basics_face_detector.py  basics_opencv.py  basics_sqlite.py  basics_tkinter.py
