[tool.poetry]
name = "udemy-python-mega-course"
version = "0.1.0"
description = "for practicing the udemy python mega course to build 10 real world apps"
authors = ["Amol Gawai <5114143+amolgawai@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
yapf = "^0.30.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
