[tool.poetry]
name = "udemy-python-mega-course"
version = "0.1.0"
description = "for practicing the udemy python mega course to build 10 real world apps"
authors = ["Amol Gawai <5114143+amolgawai@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
jupyter = "^1.0.0"
notebook = "^6.1.5"
geopy = "^2.0.0"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
python-language-server = "^0.36.1"
pylint = "^2.6.0"
flake8 = "^3.8.4"
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
